# diegoQuinas.github.io

./: .gitignore  CNAME  Cargo.toml  Makefile  README.md  index.html  package-lock.json  script.js  site.webmanifest  style.css  tailwind.css
.github/workflows/: deploy.yml
assets/: diegoquinas-rs.d.ts  diegoquinas-rs.js  diegoquinas-rs_bg.wasm  diegoquinas-rs_bg.wasm.d.ts  tailwind.css
blog/: blog.css  index.html  robots.txt  rss.xml  sitemap.xml
blog-src/: config.toml
blog-src/content/: _index.md  welcome.md
blog-src/sass/: blog.scss
blog-src/templates/: base.html  page.html  section.html
blog/welcome/: index.html
docs/superpowers/plans/: 2026-03-28-blueprint-refinement.md
docs/superpowers/specs/: 2026-03-28-blueprint-refinement-design.md  2026-05-19-libreconty-featured-project-design.md
src/: lib.rs  main.rs
