[package]
name = "diegoquinas-rs"
version = "0.1.0"
authors = ["Diego Perez Giordán <diegoperezgiordan@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = "0.7.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-ssr = "0.7.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlBodyElement",
    "IntersectionObserver", "IntersectionObserverInit",
    "DomRect", "CssStyleDeclaration",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[[bin]]
name = "diegoquinas-rs"
path = "src/main.rs"
required-features = ["web"]

[[bin]]
name = "ssg"
path = "src/bin/ssg.rs"
